[project]
name = "payment-exception-resolution"
version = "0.1.0"
description = "Production-grade multi-agent system for diagnosing, routing, and resolving failed payment transactions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "redis>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "litellm>=1.40",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "structlog>=24.1",
    "tenacity>=8.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
